name:                lexy
version:             0.1.0.0
synopsis: pull out sentences from an unstructured mishmash
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Language.Lexy
  build-depends: base >=4.7 && <4.8
               , pandoc >= 1.13 && < 2.0
               , text
               , process >= 1.2.0.0 && <1.3
               , ctkl
               , bytestring-trie
  hs-source-dirs: src
  ghc-prof-options: -fprof-auto
  default-language:    Haskell2010

executable english
  hs-source-dirs: exec
  ghc-prof-options: -fprof-auto
  build-depends: base, text, lexy
  main-is: English.hs