name:                lexy
version:             0.1.0.0
synopsis: pull out sentences from an unstructured mishmash
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Language.Lexy
  build-depends: base >=4.7 && <4.8
               , pandoc >= 1.13 && < 2.0
               , text
               , process >= 1.2.0.0 && <1.3
               , ctkl
               , bytestring-trie
               , bytestring
  hs-source-dirs: src
  ghc-prof-options: -fprof-auto
  default-language:    Haskell2010

executable english
  hs-source-dirs: exec
  ghc-prof-options: -fprof-auto
  build-depends: base
               , text
               , lexy

  main-is: English.hs

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench.hs
  build-depends:    base,
                    lexy,
                    criterion,
                    text
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6

test-suite tests
  default-language: Haskell2010
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -threaded -rtsopts
  hs-source-dirs:  test/
  main-is:         Spec.hs
  build-depends:   base >= 4 && <= 5
                   , hspec2
                   , QuickCheck < 2.7
                   , lexy
                   , text
                   , file-embed